--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title : API Design
+title : The API Stack
 
 markdown: kramdown
 
@@ -7,8 +7,8 @@ lsi: false
 pygments: true
 auto: true
 
-source: api-design
-destination: api-design
+source: api-stack
+destination: api-stack
 
 permalink: /:categories/:year/:month/:day/:title 
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
@@ -16,9 +16,9 @@ exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 paginate: 10
 paginate_path: "/blog/page:num"
 
-production_url : http://design.apievangelist.com
+production_url : http://theapistack.com
 
-BASE_PATH : http://design.apievangelist.com
+BASE_PATH : http://theapistack.com
 
 archive_path: /archive.html
 categories_path : /categories.html
