Updating Xignite Swagger via Laneworks Publish

--- a/data/xignite-swagger/xignitereleases.json
+++ b/data/xignite-swagger/xignitereleases.json
@@ -54,6 +54,12 @@
 					}
 				],
 				"responses": {
+					"202": {
+						"description": "success"
+					},
+					"422": {
+						"description": "failure"
+					},
 					"200": {
 						"description": "OK"
 					}
